Add CQ fixes